--- a/index.html
+++ b/index.html
@@ -1,31 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="assets/pokeball.png" />
+    <link rel="stylesheet" href="styles/index.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pokédex</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" href="assets/pokeball.png" />
-  <link rel="stylesheet" href="styles/index.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Pokédex</title>
-</head>
-
-<body>
-  <header>
-    <section class="header">
-      <img class="header__img " src="assets/pokeball.png">
+  <body>
+    <header class="header">
+      <img class="header__img" alt="pokeball" title="pokeball" src="assets/pokeball.png" />
       <div class="header__title">
         <h3>POKÉDEX_</h3>
       </div>
-    </section>
-  </header>
-  <main>
-    <section class="main__content">
+    </header>
+    <main class="main__content">
       <div>
         <div class="main__title">
-          <img class="header__img " src="assets/fire.jpg">
+          <img class="header__img" alt="fire" title="fire" src="assets/fire.jpg" />
           <h2>CHARIZARD</h2>
         </div>
-        <img class="main__img" src="assets/charizard.png" />
+        <img class="main__img" alt="charizard" title="charizard" src="assets/charizard.png" />
       </div>
       <div class="main__card-info">
         <div class="main__card-item">
@@ -59,21 +55,19 @@
           </div>
         </div>
       </div>
-    </section>
-  </main>
-  <footer class="footer__content">
-    <div>
-      <h3>OTHERS</h3>
-    </div>
-    <div class="footer__content-img">
-      <img class="footer__img" src="assets/Pikachu.png">
-      <img class="footer__img" src="assets/Bulbasaur.png">
-    </div>
-    <div class="footer__content-img">
-      <img class="footer__img" src="assets/Squirtle.png">
-      <img class="footer__img" src="assets/Snorlax.png">
-    </div>
-  </footer>
-</body>
-
+    </main>
+    <footer class="footer__content">
+      <div>
+        <h3>OTHERS</h3>
+      </div>
+      <div class="footer__content-img">
+        <img class="footer__img" alt="pokemon" title="pokemon" src="assets/Pikachu.png" />
+        <img class="footer__img" alt="pokemon" title="pokemon" src="assets/Bulbasaur.png" />
+      </div>
+      <div class="footer__content-img">
+        <img class="footer__img" alt="pokemon" title="pokemon" src="assets/Squirtle.png" />
+        <img class="footer__img" alt="pokemon" title="pokemon" src="assets/Snorlax.png" />
+      </div>
+    </footer>
+  </body>
 </html>
