--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </main>
     <footer class="footer__content">
-      <div>
+      <div class="footer___title">
         <h3>OTHERS</h3>
       </div>
       <div class="footer__content-img">
