--- a/index.html
+++ b/index.html
@@ -8,66 +8,66 @@
     <title>Pokédex</title>
   </head>
 
-  <body>
+  <body class="body">
     <header class="header">
       <img class="header__img" alt="pokeball" title="pokeball" src="assets/pokeball.png" />
-      <div class="header__title">
-        <h3>POKÉDEX_</h3>
-      </div>
+      <section class="header__title">
+        <h3 class="header_space">POKÉDEX_</h3>
+      </section>
     </header>
     <main class="main__content">
-      <div>
-        <div class="main__title">
+      <section class="main">
+        <article class="main__title">
           <img class="header__img" alt="fire" title="fire" src="assets/fire.jpg" />
-          <h2>CHARIZARD</h2>
-        </div>
+          <h2 class="main__space">CHARIZARD</h2>
+        </article>
         <img class="main__img" alt="charizard" title="charizard" src="assets/charizard.png" />
-      </div>
-      <div class="main__card-info">
-        <div class="main__card-item">
-          <div class="main__card-item2">
+      </section>
+      <section class="main__card-info">
+        <section class="main__card-item">
+          <article class="main__card-item2">
             <p class="main__card-title">NO.</p>
             <p class="main__card-value">006</p>
-          </div>
-          <div class="main__card-item2">
+          </article>
+          <article class="main__card-item2">
             <p class="main__card-title">LEVEL</p>
             <p class="main__card-value">100</p>
-          </div>
-        </div>
-        <div class="main__card-item">
-          <div class="main__card-item2">
+          </article>
+        </section>
+        <section class="main__card-item">
+          <article class="main__card-item2">
             <p class="main__card-title">TYPE</p>
             <p class="main__card-value">FIRE</p>
-          </div>
-          <div class="main__card-item2">
+          </article>
+          <article class="main__card-item2">
             <p class="main__card-title">HABILITY</p>
             <p class="main__card-value">FLAMES</p>
-          </div>
-        </div>
-        <div class="main__card-item">
-          <div class="main__card-item2">
+          </article>
+        </section>
+        <section class="main__card-item">
+          <article class="main__card-item2">
             <p class="main__card-title">HEIGHT</p>
             <p class="main__card-value">1.7 m</p>
-          </div>
-          <div class="main__card-item2">
+          </article>
+          <article class="main__card-item2">
             <p class="main__card-title">WEIGHT</p>
             <p class="main__card-value">90.5 Kg</p>
-          </div>
-        </div>
-      </div>
+          </article>
+        </section>
+      </section>
     </main>
     <footer class="footer__content">
-      <div class="footer___title">
+      <section class="footer___title">
         <h3>OTHERS</h3>
-      </div>
-      <div class="footer__content-img">
+      </section>
+      <section class="footer__content-img">
         <img class="footer__img" alt="pokemon" title="pokemon" src="assets/Pikachu.png" />
         <img class="footer__img" alt="pokemon" title="pokemon" src="assets/Bulbasaur.png" />
-      </div>
-      <div class="footer__content-img">
+      </section>
+      <section class="footer__content-img">
         <img class="footer__img" alt="pokemon" title="pokemon" src="assets/Squirtle.png" />
         <img class="footer__img" alt="pokemon" title="pokemon" src="assets/Snorlax.png" />
-      </div>
+      </section>
     </footer>
   </body>
 </html>
